--- a/src/de/unistuttgart/iwb/multivalcagui/messages.properties
+++ b/src/de/unistuttgart/iwb/multivalcagui/messages.properties
@@ -1,7 +1,5 @@
 Hello=Hello World.
 head1=MultiVaLCA
-head2=Version 0.531
-date=03.07.2018
 info1=Dr.-Ing. Joachim Schwarte
 info2=Institut für Werkstoffe im Bauwesen
 info3=Universität Stuttgart
@@ -170,3 +168,4 @@ stat38=>>> Das angegebene Prozessmodul existiert nicht. <<<
 stat39=>>> Das angegebene Prozessmodul ist inkompatibel. <<<
 stat40=>>> Die Gruppe umfasst 
 stat41= Prozessmodule. <<<
+stat42=>>> Name ist weder Produktsystem noch Produktdeklaration <<<
