--- a/src/de/unistuttgart/iwb/multivalcagui/messages_en.properties
+++ b/src/de/unistuttgart/iwb/multivalcagui/messages_en.properties
@@ -1,7 +1,5 @@
 Hello=Hello World.
 head1=MultiVaLCA
-head2=Version
-date=
 info1=Dr.-Ing. Joachim Schwarte
 info2=Institute for Construction Materials
 info3=University of Stuttgart
@@ -170,4 +168,5 @@ stat38=>>> The Process Module does not exist. <<<
 stat39=>>> The Process Module ist not compatible. <<<
 stat40=>>> The Group contains 
 stat41= Product Modules. <<<
+stat42=>>> The Name does not belong to a Product System or Product Declaration. <<<
 
