Bundle handling korrigiert

--- a/src/de/unistuttgart/iwb/multivalcagui/messages_hr.properties
+++ b/src/de/unistuttgart/iwb/multivalcagui/messages_hr.properties
@@ -83,7 +83,7 @@ mp61=XML-Export
 mp61e=Export baze podataka u XML-datoteku
 mp62=XML-Import
 mp62e=Import baze podataka iz XML-datoteke
-mp14=
+mp14=kategorija utjecaja
 mp14e=Stvori novu kategoriju utjecaja 
 p10n1=Nova kategorija utjecaja
 p10n2=Ime kategorije utjecaja
