--- a/src/de/unistuttgart/iwb/multivalcagui/messages_de.properties
+++ b/src/de/unistuttgart/iwb/multivalcagui/messages_de.properties
@@ -169,4 +169,5 @@ stat39=>>> Das angegebene Prozessmodul ist inkompatibel. <<<
 stat40=>>> Die Gruppe umfasst 
 stat41= Prozessmodule. <<<
 stat42=>>> Name ist weder Produktsystem noch Produktdeklaration <<<
-
+lbl01=Feste Abweichung in %
+btn18=Abweichung anwenden
