--- a/src/de/unistuttgart/iwb/multivalcagui/messages_en.properties
+++ b/src/de/unistuttgart/iwb/multivalcagui/messages_en.properties
@@ -40,22 +40,22 @@ bt08=Add Produkt to demand vector
 bt09=Add Pre- or Coproduct Flow
 stat02=>>> No Name has been entered. <<<
 stat03=>>> The name is already in use. <<<
-stat04=>>> Number of Flow Objects: 
-stat05= <<<
-stat06=>>> Number of Process Modules: 
+stat04=>>> Number of Flow Objects:\u0020
+stat05=\u0020<<<
+stat06=>>> Number of Process Modules:\u0020
 stat07=>>> Incomplete Entry <<<
-stat08=>>> Product Module 
-stat09= owns 
-stat10= Flows <<<
+stat08=>>> Product Module
+stat09=\u0020owns\u0020
+stat10=\u0020Flows <<<
 stat11=>>> Unknown Flow Name <<<
-stat12=>>> Number of Product Systems: 
+stat12=>>> Number of Product Systems:\u0020
 stat13=>>> Illegal Recursion <<<
-stat14=>>> Product System
-stat15= contains 
-stat16= Elements <<<
+stat14=>>> Product System\u0020
+stat15=\u0020contains\u0020
+stat16=\u0020Elements <<<
 stat17=>>> The Name does not belong to a Process Module or Product System. <<<
-stat18=>>> The demand vector contains  
-stat19=>>> The vector of Pre- or Coproducts contains 
+stat18=>>> The demand vector contains
+stat19=>>> The vector of Pre- or Coproducts contains \u0020
 stat20=>>> Space is an illegal character! <<<
 mp4=List
 mp41=Flows
@@ -89,7 +89,7 @@ p10n3=Indicator
 stat22=>>> No Category has been entered. <<<
 stat23=>>> The Category already exists. <<<
 stat24=>>> No Indicator has been entered. <<<
-stat25=>>> Number of Impact Categories: 
+stat25=>>> Number of Impact Categories:\u0020
 mp44=Impact Categories
 mp44e=List of all Impact Categories
 p11n1=Category Indicator
@@ -112,8 +112,8 @@ mp52e=LCIA for single Objects
 p14n1=New LCIA Method
 p14n2=Name of the LCIA Method
 bt11=Add
-stat28=>>> Categories: 
-stat29=<<< >>> Chraracterization Factors: 
+stat28=>>> Categories:\u0020
+stat29=\u0020<<< >>> Chraracterization Factors:\u0020
 stat30=>>> The entered Characterization Factor does not exist. <<<
 p16n1=Impact assessment
 p16n2=Object Type
@@ -166,7 +166,6 @@ bt17=Add Module to Group
 stat37=>>> The Flow does not exist. <<<
 stat38=>>> The Process Module does not exist. <<<
 stat39=>>> The Process Module ist not compatible. <<<
-stat40=>>> The Group contains 
-stat41= Product Modules. <<<
-stat42=>>> The Name does not belong to a Product System or Product Declaration. <<<
+stat40=>>> The Group contains\u0020
+stat41=\u0020Product Modules. <<<
 
