--- a/src/de/unistuttgart/iwb/multivalcagui/messages_fr.properties
+++ b/src/de/unistuttgart/iwb/multivalcagui/messages_fr.properties
@@ -40,22 +40,22 @@ bt08=Ajouter Produit au vecteur du besoin
 bt09=Ajouter un Flux de Pré- ou Coproduit
 stat02=>>> Il n'y a pas de nom indiqué. <<<
 stat03=>>> Le nom indiqué existe déjà. <<<
-stat04=>>> Nombre d'Objets de Flux: 
-stat05= <<<
-stat06=>>> Nombre des Modules de Processus: 
+stat04=>>> Nombre d'Objets de Flux:\u0020
+stat05=\u0020<<<
+stat06=>>> Nombre des Modules de Processus:\u0020
 stat07=Saisie incomplète
-stat08=>>> Module de Produit 
-stat09= possède 
-stat10= Flux <<<
+stat08=>>> Module de Produit
+stat09=\u0020possède\u0020
+stat10=\u0020Flux <<<
 stat11=>>> Nom de Flux inconnu <<<
-stat12=>>> Nombre de systèmes de produit: 
+stat12=>>> Nombre de systèmes de produit:\u0020
 stat13=>>> Récursion inadmissible <<<
-stat14=>>> Système de Produit 
-stat15= contient 
-stat16=Éléments <<<
+stat14=>>> Système de Produit\u0020
+stat15=\u0020contient\u0020
+stat16=\u0020Éléments <<<
 stat17=>>> Le nom n'est ni Module de Processus ni Système de Produit. <<<
-stat18=>>> Le Vecteur du besoin contient 
-stat19=>>> Le Vecteur de Pré- ou Coproduit contient 
+stat18=>>> Le Vecteur du besoin contient
+stat19=>>> Le Vecteur de Pré- ou Coproduit contient\u0020
 stat20=>>> N'utilisez pas des espaces! <<<
 mp4=Liste
 mp41=Flux
@@ -89,7 +89,7 @@ p10n3=Indicateur
 stat22=>>> Il n'ya pas de Catégorie indiqué. <<<
 stat23=>>> La Catégorie indiqué existe déjà. <<<
 stat24=>>> Il n'ya pas d'Indicateur indiqué. <<<
-stat25=>>> Nombre de Catégories d'Impact: 
+stat25=>>> Nombre de Catégories d'Impact:\u0020
 mp44=Catégories d'Impact
 mp44e=Liste de toutes les Catégories d'Impact
 p11n1=Indicateur d'Impact
@@ -112,8 +112,8 @@ mp52e=Évaluation de l'Impact pour des Objets individuels
 p14n1=Nouvelle Méthode d'Évaluation
 p14n2=Nom de la Méthode d'Évaluation
 bt11=Ajouter
-stat28=>>> Catégories: 
-stat29=<<< >>> Facteurs de Charactérisation: 
+stat28=>>> Catégories:\u0020
+stat29=\u0020<<< >>> Facteurs de Charactérisation:\u0020
 stat30=>>> Le Facteur de Caractérisation indiqué n'existe pas. <<<
 p16n1=Évaluation de l'Impact
 p16n2=Type d'Objet
@@ -166,5 +166,6 @@ bt17=Ajouter le Module au Groupe
 stat37=>>> Le Flux indiqué n'existe pas. <<<
 stat38=>>> Le Module de Processus n'existe pas. <<<
 stat39=>>> Le Module de Processus n'est pas compatible. <<<
-stat40=>>> Le groupe contient 
-stat41= Modules de Produit. <<<
+stat40=>>> Le groupe contient\u0020
+stat41=\u0020Modules de Produit. <<<
+
