--- a/src/de/unistuttgart/iwb/multivalcagui/messages_hr.properties
+++ b/src/de/unistuttgart/iwb/multivalcagui/messages_hr.properties
@@ -1,8 +1,8 @@
 
 head1=MultiVaLCA
 info1=Dr.-Ing. Joachim Schwarte
-info2=Sveu\u010Dili\u0161te Stuttgart
-info3=Institut za  gra\u0111evinske mateijale (IWB)
+info2=Institut za\u00A0\u00A0gra\u0111evinske\u00A0mateijale (IWB)
+info3=Sveu\u010Dili\u0161te Stuttgart
 mp1=Novo/Uredi
 mp11=Tok
 mp11e=Stvori novi tok
@@ -40,22 +40,22 @@ bt08=Dodaj produkt u vektor potra\u017Enje
 bt09=Dodaj tok pred- ili koprodukata
 stat02=>>> Ime nije uneseno. <<<
 stat03=>>> Ime je ve\u0107 u upotrebi. <<<
-stat04=>>> Broj objekata toka: 
-stat05= <<<
-stat06=>>> Broj procesnih modula: 
+stat04=>>> Broj objekata toka:\u0020
+stat05=\u0020<<<
+stat06=>>> Broj procesnih modula:\u0020
 stat07=>>> Nepotpun unos <<<
-stat08=>>> Procesni modul 
-stat09= posjeduje 
-stat10=Tokovi <<<
+stat08=>>> Procesni modul
+stat09=\u0020posjeduje\u0020
+stat10=\u0020Tokovi <<<
 stat11=>>> Nepoznato ime toka <<<
-stat12=>>> Broj proizvodnih sustava: 
+stat12=>>> Broj proizvodnih sustava:\u0020
 stat13=>>> Neva\u017Ee\u0107a rekurzija <<<
-stat14=>>> Proizvodni sustav 
-stat15= sadr\u017Ei 
-stat16=Elementi <<<
+stat14=>>> Proizvodni sustav\u0020
+stat15=\u0020sadr\u017Ei\u0020
+stat16=\u0020Elementi <<<
 stat17=>>> Ime ne pripada procesnom modulu ili sustavu produkta. <<<
-stat18=>>> Vektor potra\u017Enje sadr\u017Ei 
-stat19=>>> Vektor pred- i koprodukata sadr\u017Ei 
+stat18=>>> Vektor potra\u017Enje sadr\u017Ei
+stat19=>>> Vektor pred- i koprodukata sadr\u017Ei\u0020
 stat20=>>> Izbjegavajte uporabu razmaka! <<<
 mp4=Lista
 mp41=Tokovi
@@ -89,7 +89,7 @@ p10n3=Pokazatelj
 stat22=>>> Kategorija nije definirana. <<<
 stat23=>>> Kategorija ve\u0107 postoji. <<<
 stat24=>>> Pokazatelj nije definiran. <<<
-stat25=>>> Broj kategorija utjecaja: 
+stat25=>>> Broj kategorija utjecaja:\u0020
 mp44=Kategorije utjecaja
 mp44e=Lista kategorija utjecaja
 p11n1=Pokazatelj kategorije
@@ -112,8 +112,8 @@ mp52e=LCIA za pojedina\u010Dne objekte
 p14n1=Nova LCIA metoda
 p14n2=Ime LCIA metode
 bt11=Dodaj
-stat28=>>> Kategorije: 
-stat29=<<< >>> Karakterizacijski faktori: 
+stat28=>>> Kategorije:\u0020
+stat29=\u0020<<< >>> Karakterizacijski faktori:\u0020
 stat30=>>> Uneseni karakterizacijaski faktor ne postoji. <<<
 p16n1=Procjena utjecaja
 p16n2=Tip objekta
@@ -166,5 +166,6 @@ bt17=Dodaj modul u grupu
 stat37=>>> Tok ne postoji. <<<
 stat38=>>> Procesni modul ne postoji. <<<
 stat39=>>> Procesni modul nije kompatibilan. <<<
-stat40=>>> Grupa sadr\u017Ei 
-stat41= Procesni moduli. <<<
+stat40=>>> Grupa sadr\u017Ei\u0020
+stat41=\u0020 Procesni moduli. <<<
+
