--- a/src/de/unistuttgart/iwb/multivalcagui/messages_pt.properties
+++ b/src/de/unistuttgart/iwb/multivalcagui/messages_pt.properties
@@ -1,8 +1,8 @@
 
-head1=MultiVaLCA
-info1=Dr.-Ing. Joachim Schwarte
-info2=Institut für Werkstoffe im Bauwesen
-info3=Universität Stuttgart
+head1=
+info1=
+info2=
+info3=
 mp1=Novo/Editar
 mp11=Fluxo
 mp11e=Criar novo fluxo
@@ -40,25 +40,25 @@ bt08=Adicionar produto ao vetor de demanda
 bt09=Adicionar Pré- ou fluxo coproduto 
 stat02=>>> Nenhum nome foi inserido. <<<
 stat03=>>> O nome já está em uso. <<<
-stat04=>>> Número de objetos de fluxo: 
-stat05= <<<
-stat06=>>> Número de módulos de processo: 
-stat07=Entrada incompleta
-stat08=>>> Módulo de processo
-stat09=possui
-stat10=Fluxos <<<
+stat04=>>> Número de objetos de fluxo:\u0020
+stat05=\u0020<<<
+stat06=>>> Número de módulos de processo:\u0020
+stat07=>>> Entrada incompleta <<<
+stat08=>>> Módulos de processos
+stat09=\u0020possui\u0020
+stat10=\u0020Fluxos <<<
 stat11=>>> Nome do fluxo desconhecido <<<
-stat12=>>> Número de sistemas de produtos: 
+stat12=>>> Número de sistemas de produtos\u0020
 stat13=>>> Recursão ilegal <<<
-stat14=>>> Sistema de produto
-stat15=contém
-stat16=Elementos <<<
+stat14=>>> Sistema de produto\u0020
+stat15=\u0020contém\u0020
+stat16=\u0020Elementos <<<
 stat17=>>> O nome não pertence a um módulo de processo ou sistema de produto. <<<
 stat18=>>> O vetor de demanda contém
-stat19=>>> O vetor de pré- ou coprodutos contém
+stat19=>>> O vetor de pré- ou coprodutos contém\u0020
 stat20=>>> Uso de espaço não permitido! <<<
 mp4=Lista
-mp41=Fluxo
+mp41=Fluxos
 mp41e=Lista de todos os fluxos
 mp42=Módulos de processos
 mp42e=Lista de todos os módulos de processos
@@ -66,8 +66,8 @@ mp43=Sistemas de produto
 mp43e=Lista de todos os sistemas de produto
 p02n5=Limite inferior
 p02n6=Limite superior
-bt10=>>> Confirmar limites <<<
-stat21=Entrada inválida
+bt10=Confirmar limites
+stat21=>>> Entrada inválida <<<
 p06n1=Nome
 p08n1=Tipo de elemento
 p08n2=Nome do elemento
@@ -81,7 +81,7 @@ mp61=Exportar-XML
 mp61e=Exportar banco de bados para XML
 mp62=Importar-XML
 mp62e=Importar banco de dados para XML
-mp14=Categorias de impacto
+mp14=categoria de impacto
 mp14e=Criar nova categoria de impacto
 p10n1=Nova categoria de impacto
 p10n2=Nome da categoria de impacto
@@ -89,7 +89,7 @@ p10n3=Indicador
 stat22=>>> Nenhuma categoria foi inserida. <<<
 stat23=>>> A categoria já existe. <<<
 stat24=>>> Nenhum indicador foi inserido. <<<
-stat25=>>> Número de categorias de impacto: 
+stat25=>>> Número de categorias de impacto:\u0020
 mp44=Categorias de impacto
 mp44e=Lista de todas as categorias de impacto
 p11n1=Indicador de impacto
@@ -112,8 +112,8 @@ mp52e=Avaliação de impacto para objetos individuais
 p14n1=Novo método de avaliação
 p14n2=Nome do método de avaliação
 bt11=Adicionar
-stat28=Categorias
-stat29=<<< >>> Fatores de caracterização
+stat28=>>> Categorias: \u0020
+stat29=\u0020<<< >>> Fatores de caracterização:\u0020
 stat30=>>> O fator de caracterização especificado não existe. <<<
 p16n1=Avaliação de Impacto
 p16n2=Tipo de objeto
@@ -141,10 +141,10 @@ mp47e=Lista de declarações de produto
 mp48e=Lista de componentes
 mp49e=Lista de composições
 p17n2=Nome do produto a declarar
-stat32=Nenhum método de avaliação foi especificado
-stat33=O método de avaliação especificado não existe.
-stat34=Número de declarações de produto.
-stat35=Categoria de impa
+stat32=>>> Nenhum método de avaliação foi especificado. <<<
+stat33=>>> O método de avaliação especificado não existe. <<<
+stat34=>>> Número de declarações de produto: <<<
+stat35=>>> Categoria de impa: <<<
 p18n2=Nome do componente
 p18n3=Referência
 bt13=Criar novo componente
@@ -152,7 +152,7 @@ p19n2=Nome da composição
 p19n3=Componente a ser adicionado
 bt14=Criar nova composiçao
 bt15=Addicionar componente
-stat36=O nome está em uso de outra forma
+stat36=>>> O nome está em uso de outra forma. <<<
 mp121=Módulo individual
 mp122=Grupo de módulos de processos
 mp121e=Criar módulo de processo individual
@@ -166,7 +166,8 @@ bt17=Adicionar módulo ao grupo
 stat37=>>> O fluxo não existe. <<<
 stat38=>>> O módulo de processo não existe. <<<
 stat39=>>> O módulo de processo é incompatível. <<<
-stat40=>>> O grupo contém
-stat41=Módulos de processos. <<<
+stat40=>>> O grupo contém\u0020
+stat41=\u0020módulo de processo. <<<
+
 
 
