--- a/src/de/unistuttgart/iwb/multivalcagui/messages.properties
+++ b/src/de/unistuttgart/iwb/multivalcagui/messages.properties
@@ -21,7 +21,7 @@ p01n1=Neuer Fluss
 p01n2=Name des Flusses
 p01n3=Typ
 p01n4=Einheit
-stat01=>>> ... <<<
+stat01=>>> \u2026 <<<
 p02n1=Neues Prozessmodul  
 p02n2=Name des Prozessmoduls
 p02n4=Menge
@@ -40,22 +40,22 @@ bt08=Bedarfsvektor ergänzen
 bt09=VK-Fluss hinzufügen
 stat02=>>> Es wurde kein Name angegeben. <<<
 stat03=>>> Der angegebene Name ist bereits vorhanden. <<<
-stat04=>>> Anzahl Flussobjekte: 
-stat05= <<<
-stat06=>>> Anzahl Prozessmodule: 
+stat04=>>> Anzahl Flussobjekte:\u0020
+stat05=\u0020 <<<
+stat06=>>> Anzahl Prozessmodule:\u0020
 stat07=>>> unvollständige Eingabe <<<
 stat08=>>> Prozessmodul 
-stat09= besitzt 
-stat10= Flüsse <<<
+stat09=\u0020 besitzt \u0020
+stat10=\u0020 Flüsse <<<
 stat11=>>> unbekannter Flussname <<<
-stat12=>>> Anzahl Produktsysteme: 
+stat12=>>> Anzahl Produktsysteme: \u0020
 stat13=>>> unzulässige Rekursion <<<
-stat14=>>> Produktsystem
-stat15= besteht aus 
-stat16= Elementen <<<
+stat14=>>> Produktsystem \u0020
+stat15=\u0020 besteht aus \u0020
+stat16=\u0020 Elementen <<<
 stat17=>>> Name ist weder Prozessmodul noch Produktsystem <<<
 stat18=>>> Der Bedarfsvektor enthält 
-stat19=>>> Der VK-Vektor enthält 
+stat19=>>> Der VK-Vektor enthält \u0020
 stat20=>>> Bitte keine Leerzeichen verwenden! <<<
 mp4=Liste
 mp41=Flüsse
@@ -89,7 +89,7 @@ p10n3=Indikator
 stat22=>>> Es wurde keine Kategorie angegeben. <<<
 stat23=>>> Die angegebene Kategorie ist bereits vorhanden. <<<
 stat24=>>> Es wurde kein Indikator angegeben. <<<
-stat25=>>> Anzahl Wirkungskategorien: 
+stat25=>>> Anzahl Wirkungskategorien: \u0020
 mp44=Wirkungskategorien
 mp44e=Liste aller Wirkungskategorien
 p11n1=Wirkungsindikator
@@ -112,8 +112,8 @@ mp52e=Wirkungsabschätzung für einzelne Objekte
 p14n1=Neue Bewertungsmethode
 p14n2=Name der Bewertungsmethode
 bt11=hinzufügen
-stat28=>>> Kategorien: 
-stat29= <<< >>> Charakterisierungsfaktoren: 
+stat28=>>> Kategorien: \u0020
+stat29=\u0020 <<< >>> Charakterisierungsfaktoren: \u0020
 stat30=>>> Der angegebene Charakterisierungsfaktor existiert nicht. <<<
 p16n1=Wirkungsabschätzung
 p16n2=Objekttyp
@@ -166,6 +166,6 @@ bt17=Modul zur Gruppe hinzufügen
 stat37=>>> Der angegebene Fluss existiert nicht. <<<
 stat38=>>> Das angegebene Prozessmodul existiert nicht. <<<
 stat39=>>> Das angegebene Prozessmodul ist inkompatibel. <<<
-stat40=>>> Die Gruppe umfasst 
-stat41= Prozessmodule. <<<
+stat40=>>> Die Gruppe umfasst \u0020
+stat41=\u0020 Prozessmodule. <<<
 stat42=>>> Name ist weder Produktsystem noch Produktdeklaration <<<
