Buttons ausgelagert aus initUI

--- a/src/de/unistuttgart/iwb/multivalcagui/messages_de.properties
+++ b/src/de/unistuttgart/iwb/multivalcagui/messages_de.properties
@@ -41,21 +41,21 @@ bt09=VK-Fluss hinzufügen
 stat02=>>> Es wurde kein Name angegeben. <<<
 stat03=>>> Der angegebene Name ist bereits vorhanden. <<<
 stat04=>>> Anzahl Flussobjekte:\u0020
-stat05=\u0020 <<<
+stat05=\u0020<<<
 stat06=>>> Anzahl Prozessmodule:\u0020
 stat07=>>> unvollständige Eingabe <<<
 stat08=>>> Prozessmodul 
 stat09=\u0020besitzt\u0020
-stat10=\u0020 Flüsse <<<
+stat10=\u0020Flüsse <<<
 stat11=>>> unbekannter Flussname <<<
-stat12=>>> Anzahl Produktsysteme: \u0020
+stat12=>>> Anzahl Produktsysteme:\u0020
 stat13=>>> unzulässige Rekursion <<<
-stat14=>>> Produktsystem \u0020
-stat15=\u0020 besteht aus \u0020
-stat16=\u0020 Elementen <<<
+stat14=>>> Produktsystem\u0020
+stat15=\u0020besteht aus\u0020
+stat16=\u0020Elementen <<<
 stat17=>>> Name ist weder Prozessmodul noch Produktsystem <<<
-stat18=>>> Der Bedarfsvektor enthält 
-stat19=>>> Der VK-Vektor enthält \u0020
+stat18=>>> Der Bedarfsvektor enthält\u0020
+stat19=>>> Der VK-Vektor enthält\u0020
 stat20=>>> Bitte keine Leerzeichen verwenden! <<<
 mp4=Liste
 mp41=Flüsse
@@ -89,7 +89,7 @@ p10n3=Indikator
 stat22=>>> Es wurde keine Kategorie angegeben. <<<
 stat23=>>> Die angegebene Kategorie ist bereits vorhanden. <<<
 stat24=>>> Es wurde kein Indikator angegeben. <<<
-stat25=>>> Anzahl Wirkungskategorien: \u0020
+stat25=>>> Anzahl Wirkungskategorien:\u0020
 mp44=Wirkungskategorien
 mp44e=Liste aller Wirkungskategorien
 p11n1=Wirkungsindikator
@@ -112,8 +112,8 @@ mp52e=Wirkungsabschätzung für einzelne Objekte
 p14n1=Neue Bewertungsmethode
 p14n2=Name der Bewertungsmethode
 bt11=hinzufügen
-stat28=>>> Kategorien: \u0020
-stat29=\u0020 <<< >>> Charakterisierungsfaktoren: \u0020
+stat28=>>> Kategorien:\u0020
+stat29=\u0020<<< >>> Charakterisierungsfaktoren:\u0020
 stat30=>>> Der angegebene Charakterisierungsfaktor existiert nicht. <<<
 p16n1=Wirkungsabschätzung
 p16n2=Objekttyp
