--- a/src/de/unistuttgart/iwb/multivalcagui/messages_de.properties
+++ b/src/de/unistuttgart/iwb/multivalcagui/messages_de.properties
@@ -171,3 +171,6 @@ stat41=\u0020 Prozessmodule. <<<
 stat42=>>> Name ist weder Produktsystem noch Produktdeklaration <<<
 lbl01=Feste Abweichung in %
 btn18=Abweichung anwenden
+stat43=>>> Der Name bezeichnet bereits ein Prozessmodul. <<<
+stat44=>>> Der Name bezeichnet bereits eine Modulgruppe. <<<
+stat45=>>> Der Name bezeichnet bereits ein Produktsystem. <<<
