--- a/src/de/unistuttgart/iwb/multivalcagui/messages_de.properties
+++ b/src/de/unistuttgart/iwb/multivalcagui/messages_de.properties
@@ -169,8 +169,8 @@ stat39=>>> Das angegebene Prozessmodul ist inkompatibel. <<<
 stat40=>>> Die Gruppe umfasst \u0020
 stat41=\u0020 Prozessmodule. <<<
 stat42=>>> Name ist weder Produktsystem noch Produktdeklaration <<<
-lbl01=Feste Abweichung in %
-btn18=Abweichung anwenden
+lbl01=Fixed Deviation in %
+btn18=Apply Deviation
 stat43=>>> Der Name bezeichnet bereits ein Prozessmodul. <<<
 stat44=>>> Der Name bezeichnet bereits eine Modulgruppe. <<<
 stat45=>>> Der Name bezeichnet bereits ein Produktsystem. <<<
