--- a/src/de/unistuttgart/iwb/multivalcagui/messages_en.properties
+++ b/src/de/unistuttgart/iwb/multivalcagui/messages_en.properties
@@ -18,7 +18,7 @@ mp31=Language
 mp31e=Language Selection
 bt01=Store
 p01n1=New Flow
-p01n2=Name the Flow
+p01n2=Name of the Flow
 p01n3=Type
 p01n4=Unit
 stat01=>>> \u2026 <<<
@@ -168,4 +168,9 @@ stat38=>>> The Process Module does not exist. <<<
 stat39=>>> The Process Module ist not compatible. <<<
 stat40=>>> The Group contains\u0020
 stat41=\u0020Product Modules. <<<
-
+stat42=>>> Name is neither Product System nor Product Declaration <<<
+lbl01=Fixed Deviation in %
+btn18=Apply Deviation
+stat43=>>> The Name already designates a Process Module. <<<
+stat44=>>> The Name already designates a Process Module Group. <<<
+stat45=>>> The Name already designates a Product System. <<<
