--- a/src/de/unistuttgart/iwb/multivalcagui/messages_fr.properties
+++ b/src/de/unistuttgart/iwb/multivalcagui/messages_fr.properties
@@ -168,4 +168,9 @@ stat38=>>> Le Module de Processus n'existe pas. <<<
 stat39=>>> Le Module de Processus n'est pas compatible. <<<
 stat40=>>> Le groupe contient\u0020
 stat41=\u0020Modules de Produit. <<<
-
+stat42=>>> Name ist weder Produktsystem noch Produktdeklaration <<<
+lbl01=Feste Abweichung in %X
+btn18=Abweichung anwenden
+stat43=>>> Der Name bezeichnet bereits ein Prozessmodul. <<<
+stat44=>>> Der Name bezeichnet bereits eine Modulgruppe. <<<
+stat45=>>> Der Name bezeichnet bereits ein Produktsystem. <<<
