--- a/src/de/unistuttgart/iwb/multivalcagui/messages_hr.properties
+++ b/src/de/unistuttgart/iwb/multivalcagui/messages_hr.properties
@@ -168,4 +168,9 @@ stat38=>>> Procesni modul ne postoji. <<<
 stat39=>>> Procesni modul nije kompatibilan. <<<
 stat40=>>> Grupa sadr\u017Ei\u0020
 stat41=\u0020 Procesni moduli. <<<
-
+stat42=>>> Name ist weder Produktsystem noch Produktdeklaration <<<
+lbl01=Feste Abweichung in %X
+btn18=Abweichung anwenden
+stat43=>>> Der Name bezeichnet bereits ein Prozessmodul. <<<
+stat44=>>> Der Name bezeichnet bereits eine Modulgruppe. <<<
+stat45=>>> Der Name bezeichnet bereits ein Produktsystem. <<<
