--- a/src/de/unistuttgart/iwb/multivalcagui/messages_pt.properties
+++ b/src/de/unistuttgart/iwb/multivalcagui/messages_pt.properties
@@ -168,6 +168,11 @@ stat38=>>> O módulo de processo não existe. <<<
 stat39=>>> O módulo de processo é incompatível. <<<
 stat40=>>> O grupo contém\u0020
 stat41=\u0020módulo de processo. <<<
-
+stat42=>>> Name ist weder Produktsystem noch Produktdeklaration <<<
+lbl01=Feste Abweichung in %X
+btn18=Abweichung anwenden
+stat43=>>> Der Name bezeichnet bereits ein Prozessmodul. <<<
+stat44=>>> Der Name bezeichnet bereits eine Modulgruppe. <<<
+stat45=>>> Der Name bezeichnet bereits ein Produktsystem. <<<
 
 
