--- a/src/de/unistuttgart/iwb/multivalcagui/messages_ru.properties
+++ b/src/de/unistuttgart/iwb/multivalcagui/messages_ru.properties
@@ -1,6 +1,5 @@
 
 head1=MultiVaLCA
-head1=MultiVaLCA
 info1=\u0434.\u0442.\u043D \u0418\u043E\u0430\u0445\u0438\u043C \u0428\u0432\u0430\u0440\u0442\u0435
 info2=\u0438\u043D\u0441\u0442\u0438\u0442\u0443\u0442 \u0441\u0442\u0440\u043E\u0438\u0442\u0435\u043B\u044C\u043D\u044B\u0445 \u043C\u0430\u0442\u0435\u0440\u0438\u0430\u043B\u043E\u0432
 info3=\u0428\u0442\u0443\u0442\u0433\u0430\u0440\u0442\u0441\u043A\u0438\u0439 \u0443\u043D\u0438\u0432\u0435\u0440\u0441\u0438\u0442\u0435\u0442
@@ -169,3 +168,9 @@ stat38=>>> \u0423\u043A\u0430\u0437\u0430\u043D\u043D\u044B\u0439 \u043C\u043E\u
 stat39=>>> \u0423\u043A\u0430\u0437\u0430\u043D\u043D\u044B\u0439 \u043C\u043E\u0434\u0443\u043B\u044C \u043F\u0440\u043E\u0446\u0435\u0441\u0441\u0430 \u043D\u0435\u0441\u043E\u0432\u043C\u0435\u0441\u0442\u0438\u043C. <<<
 stat40=>>> \u0413\u0440\u0443\u043F\u043F\u0430 \u0432\u043A\u043B\u044E\u0447\u0430\u0435\u0442\u0020
 stat41=\u0020\u0442\u0435\u0445\u043D\u043E\u043B\u043E\u0433\u0438\u0447\u0435\u0441\u043A\u0438\u0435 \u043C\u043E\u0434\u0443\u043B\u0438. <<<
+stat42=>>> Name ist weder Produktsystem noch Produktdeklaration <<<
+lbl01=Feste Abweichung in %X
+btn18=Abweichung anwenden
+stat43=>>> Der Name bezeichnet bereits ein Prozessmodul. <<<
+stat44=>>> Der Name bezeichnet bereits eine Modulgruppe. <<<
+stat45=>>> Der Name bezeichnet bereits ein Produktsystem. <<<
