--- a/src/de/unistuttgart/iwb/multivalcagui/messages_en.properties
+++ b/src/de/unistuttgart/iwb/multivalcagui/messages_en.properties
@@ -94,8 +94,8 @@ mp44=Impact Categories
 mp44e=List of all Impact Categories
 p11n1=Category Indicator
 mp15=Characterization Factor
-mp15e=Create new Characterization Flow
-p12n1=New Characterization Flow
+mp15e=Create new Characterization Factor
+p12n1=New Characterization Factor
 p12n2=Name of the Characterization Factor
 p12n3=Factor
 stat26=>>> Illegal Factor <<<
