JButton und JLabel für Abweichung vom typ. Wert der Klasse LowerUpperDialog multilingualisiert Process Module ersetzt durch Unit Process

--- a/src/de/unistuttgart/iwb/multivalcagui/messages_en.properties
+++ b/src/de/unistuttgart/iwb/multivalcagui/messages_en.properties
@@ -6,8 +6,8 @@ info3=University of Stuttgart
 mp1=New/Edit
 mp11=Flow
 mp11e=Create new flow
-mp12=Process Module
-mp12e=Create new Process Module
+mp12=Unit Process
+mp12e=Create new Unit Process
 mp13=Product System
 mp13e=Create new Product System
 mp2=Help
@@ -22,19 +22,19 @@ p01n2=Name of the Flow
 p01n3=Type
 p01n4=Unit
 stat01=>>> \u2026 <<<
-p02n1=New Process Module
-p02n2=Name of the Process Module
+p02n1=New Unit Process
+p02n2=Name of the Unit Process
 p02n4=Amount
-bt02=Create new Process Module
+bt02=Create new Unit Process
 bt03=Add Flow
 bt04=Finished
 p03n1=Create New Product System
 p03n2=Name of the Product System
-p03n3=Process Module/Subsystem
+p03n3=Unit Process/Subsystem
 p03n4=Product in demand vector
 p03n6=Pre- or Coproduct
 bt05=Create new Product System
-bt06=Add Module/ System
+bt06=Add Process / System
 bt07=Next
 bt08=Add Produkt to demand vector
 bt09=Add Pre- or Coproduct Flow
@@ -42,9 +42,9 @@ stat02=>>> No Name has been entered. <<<
 stat03=>>> The name is already in use. <<<
 stat04=>>> Number of Flow Objects:\u0020
 stat05=\u0020<<<
-stat06=>>> Number of Process Modules:\u0020
+stat06=>>> Number of Unit Processes:\u0020
 stat07=>>> Incomplete Entry <<<
-stat08=>>> Product Module
+stat08=>>> Unit Process
 stat09=\u0020owns\u0020
 stat10=\u0020Flows <<<
 stat11=>>> Unknown Flow Name <<<
@@ -53,15 +53,15 @@ stat13=>>> Illegal Recursion <<<
 stat14=>>> Product System\u0020
 stat15=\u0020contains\u0020
 stat16=\u0020Elements <<<
-stat17=>>> The Name does not belong to a Process Module or Product System. <<<
+stat17=>>> The Name does not belong to a Unit Process or Product System. <<<
 stat18=>>> The demand vector contains
 stat19=>>> The vector of Pre- or Coproducts contains\u0020
 stat20=>>> Space is an illegal character! <<<
 mp4=List
 mp41=Flows
 mp41e=List of all Flows
-mp42=Process Modules
-mp42e=List of all Process Modules
+mp42=Unit Processes
+mp42e=List of all Unit Processes
 mp43=Product Systems
 mp43e=List of all Product Systems
 p02n5=Lower Bound
@@ -124,7 +124,7 @@ cob03=Main Value
 p16n3=Object Name
 p16n4=Type of Value
 p16n5=Value
-stat31=>>> The Module is already present in the Product System. <<<
+stat31=>>> The Unit Process is already present in the Product System. <<<
 mp17=Product Declaration
 mp18=Component
 mp19=Composition
@@ -153,24 +153,24 @@ p19n3=Component to add
 bt14=Create new Composition
 bt15=Add Component
 stat36=>>> The name is in use otherwise. <<<
-mp121=Single Module
-mp122=Group of Process Modules
-mp121e=Create single Process Module
-mp122e=Create Group of Process Modules
-p20n1=New Process Module Group
+mp121=Single Unit Process
+mp122=Group of Unit Processes
+mp121e=Create single Unit Process
+mp122e=Create Group of Unit Processes
+p20n1=New Unit Process Group
 p20n2=Name of the Group
 p20n3=Relevant Product Flow
-p20n4=Name of the Module to add
+p20n4=Name of the Unit Process to add
 bt16=Create new Group
-bt17=Add Module to Group
+bt17=Add Unit Process to Group
 stat37=>>> The Flow does not exist. <<<
-stat38=>>> The Process Module does not exist. <<<
-stat39=>>> The Process Module ist not compatible. <<<
+stat38=>>> The Unit Process does not exist. <<<
+stat39=>>> The Unit Process is not compatible. <<<
 stat40=>>> The Group contains\u0020
-stat41=\u0020Product Modules. <<<
+stat41=\u0020 Unit Processes. <<<
 stat42=>>> Name is neither Product System nor Product Declaration <<<
 lbl01=Fixed Deviation in %
 btn18=Apply Deviation
-stat43=>>> The Name already designates a Process Module. <<<
-stat44=>>> The Name already designates a Process Module Group. <<<
+stat43=>>> The Name already designates a Unit Process. <<<
+stat44=>>> The Name already designates a Unit Process Group. <<<
 stat45=>>> The Name already designates a Product System. <<<
