--- a/src/de/unistuttgart/iwb/multivalcagui/messages_de.properties
+++ b/src/de/unistuttgart/iwb/multivalcagui/messages_de.properties
@@ -126,6 +126,10 @@ p16n4=Werttyp
 p16n5=Wert
 stat31=>>> Das Modul ist bereits Bestandteil des Produktsystems. <<<
 mp17=Produktdeklaration
+mp20=Einzeldeklaration
+mp20e=Einzelne Deklaration erfassen 
+mp22=Produktdeklarationsgruppe
+mp22e=Produktdeklarationsgruppe erfassen
 mp18=Komponente
 mp19=Komposition
 p17n1=Neue Produktdeklaration
@@ -174,3 +178,9 @@ btn18=Abweichung anwenden
 stat43=>>> Der Name bezeichnet bereits ein Prozessmodul. <<<
 stat44=>>> Der Name bezeichnet bereits eine Modulgruppe. <<<
 stat45=>>> Der Name bezeichnet bereits ein Produktsystem. <<<
+stat46=>>> Der Name bezeichnet bereits eine Produktdeklarationsgruppe <<<
+stat47=\u0020 Produktdeklarationen <<<
+stat48=>>> Name ist weder Produktdeklaration, Produktdeklarationsgruppe noch Produktsystem <<<
+p22n1=Neue Produktdeklarationsgruppe
+p22n4=Name der hinzuzufügenden Produktdeklaration
+bt18=Produktdekl. zur Gruppe hinzufügen
