--- a/src/de/unistuttgart/iwb/multivalcagui/messages_de.properties
+++ b/src/de/unistuttgart/iwb/multivalcagui/messages_de.properties
@@ -151,7 +151,7 @@ mp49e=Liste der Kompositionen
 p17n2=Name des zu deklarierenden Produkts
 stat32=>>> Es wurde keine Bewertungsmethode angegeben. <<<
 stat33=>>> Die angegebene Bewertungsmethode existiert nicht. <<<
-stat34=>>> Anzahl Produktdeklarationen: <<<
+stat34=>>> Anzahl Produktdeklarationen:\u0020
 stat35=>>> Unkorrekte Wirkungskategorie <<<
 p18n2=Name der Komponente
 p18n3=Bezug
