--- a/src/de/unistuttgart/iwb/multivalcagui/messages_de.properties
+++ b/src/de/unistuttgart/iwb/multivalcagui/messages_de.properties
@@ -1,45 +1,229 @@
 
+// Allgemein
+
 head1=MultiVaLCA
 info1=Dr.-Ing. Joachim Schwarte
 info2=Institut für Werkstoffe im Bauwesen
 info3=Universität Stuttgart
+
+//Menuepunkte
+
 mp1=Neu/Bearbeiten
 mp11=Fluss
 mp11e=neues Flussobjekt erfassen
 mp12=Prozessmodul
 mp12e=neues Prozessmodul erfassen
+mp121=Einzelmodul
+mp121e=einzelnes Prozessmodul erfassen
+mp122=Prozessmodulgruppe
+mp122e=Gruppe von Prozessmodulen erfassen
 mp13=Produktsystem
 mp13e=neues Produktsystem erfassen
+mp131=Einzelnes Produktsystem
+mp131e=einzelnes Produktsystem erfassen
+mp132=Produktsystemgruppe
+mp132e=Gruppe von Produktsystemen erfassen
+mp14=Wirkungskategorie
+mp14e=neue Wirkungskategorie erfassen
+mp15=Charakterisierungsfaktor
+mp15e=neuen Charakterisierungsfaktor erfassen
+mp16=Bewertungsmethode
+mp16e=neue Bewertungsmethode erfassen
+mp17=Produktdeklaration
+mp17e=Neue Produktdeklaration erfassen
+mp171=Einzeldeklaration
+mp171e=Einzelne Deklaration erfassen
+mp172=Produktdeklarationsgruppe
+mp172e=Neue Produktdeklarationsgruppe erfassen
+mp18=Komponente
+mp18e=Neue Komponente erfassen
+mp181=Einzelkomponente
+mp181e=Einzelne Komponente erfassen
+mp182=Komponentengruppe
+mp182e=Neue Komponentengruppe erfassen
+mp19=Komposition
+mp19e=Neue Komposition erfassen
+mp192=Kompositionsgruppe
+
+
 mp2=Hilfe
 mp21=Über
 mp21e=Info
+
 mp3=Einstellungen
 mp31=Sprache
 mp31e=Sprachauswahl
-bt01=speichern
+
+mp4=Liste
+mp41=Flüsse
+mp41e=Liste aller Flüsse
+mp42=Prozessmodule
+mp42e=Liste der Prozessmodule
+mp421=Einzelmodule
+mp421e=Liste der Einzelmodule
+mp422=Prozessmodulgruppen
+mp422e=Liste der Prozessmodulgruppen
+mp43=Produktsysteme
+mp43e=Liste der Produktsysteme
+mp431=Einzelne Produktsysteme
+mp431e=Liste der einzelnen Produktsysteme
+mp432=Systemgruppen
+mp432e=Liste der Systemgruppen
+mp44=Wirkungskategorien
+mp44e=Liste aller Wirkungskategorien
+mp45=Charakterisierungsfaktoren
+mp45e=Liste aller Charakterisierungsfaktoren
+mp46=Bewertungsmethoden
+mp46e=Liste der Bewertungsmethoden
+mp47=Produktdeklarationen
+mp47e=Liste der Produktdeklarationen
+mp471=Einzeldeklarationen
+mp471e=Liste der Einzeldeklarationen
+mp472=Produktdeklarationsgruppen
+mp472e=Liste der Produktdeklarationsgruppen
+mp48=Komponenten
+mp48e=Liste der Komponenten
+mp481=Einzelkomponenten
+mp481e=Liste der Einzelkomponenten
+mp482=Komponentengruppen
+mp482e=Liste der Komponentengruppen
+mp49=Kompositionen
+mp49e=Liste der Kompositionen
+mp491=Einzelkompositionen
+mp491e=Liste der Einzelkompositionen
+mp492=Kompositionsgruppen
+mp492e=Liste der Kompositionsgruppen
+
+mp5=Berechnen
+mp51=Sachbilanz berechnen
+mp51e=Sachbilanzen aller Produktsysteme
+mp52=Wirkungsabschätzung berechnen
+mp52e=Wirkungsabschätzung für einzelne Objekte
+
+
+mp6=Datei
+mp61=XML-Export
+mp61e=Exportieren des Objektbestandes in eine XML-Datei
+mp62=XML-Import
+mp62e=Importieren eines Objektbestandes aus einer XML-Datei
+
+// Label der Panele
+
 p01n1=Neuer Fluss
 p01n2=Name des Flusses
 p01n3=Typ
 p01n4=Einheit
-stat01=>>> \u2026 <<<
+
 p02n1=Neues Prozessmodul  
 p02n2=Name des Prozessmoduls
 p02n4=Menge
-bt02=neues Prozessmodul anlegen
-bt03=Fluss hinzufügen
-bt04=fertig
+p02n5=Untergrenze
+p02n6=Obergrenze
+p02n7=Neue Prozessmodulgruppe
+p02n8=Name der Gruppe
+p02n9=relevanter Produktfluss
+p02n10=Name des hinzuzufügenden Moduls
+
 p03n1=Neues Produktsystem
 p03n2=Name des Produktsystems
 p03n3=Prozessmodul/Prozessmodulgruppe/Subsystem/Subsystemgruppe
 p03n4=Produkt im Bedarfsvektor
 p03n6=Vor- oder Koppelprodukt
+p03n7=Neue Produktsystemgruppe
+p03n8=Name des hinzuzufügenden Systems
+
+p06n1=Name
+
+p08n1=Elementtyp
+p08n2=Elementname
+p08n3=Subsystem
+p08n4=Bedarf
+p08n5=Subsystemgruppe
+
+p10n1=Neue Wirkungskategorie  
+p10n2=Name der Wirkungskategorie
+p10n3=Indikator
+
+p11n1=Wirkungsindikator
+
+p12n1=Neuer Charakterisierungsfaktor
+p12n2=Name des Charakterisierungsfaktors
+p12n3=Faktor
+
+p13n1=Kategorie
+
+p14n1=Neue Bewertungsmethode
+p14n2=Name der Bewertungsmethode
+
+p16n1=Wirkungsabschätzung
+p16n2=Objekttyp
+p16n3=Objektname
+p16n4=Werttyp
+p16n5=Wert
+
+p17n1=Neue Produktdeklaration
+p17n2=Name des zu deklarierenden Produkts
+p17n3=Neue Produktdeklarationsgruppe
+p17n4=Name der hinzuzufügenden Produktdeklaration
+
+p18n1=Neue Komponente
+p18n2=Name der Komponente
+p18n3=Bezug
+p18n4=Neue Komponentengruppe
+p18n5=Name der hinzuzufügenden Komponente
+
+p19n1=Neue Komposition
+p19n2=Name der Komposition
+p19n3=hinzuzufügende Komponente
+p19n4=Anzahl
+p19n5=Neue Kompositionsgruppe
+p19n6=Name der hinzuzufügenden Komposition
+
+p22n1=Subkomposition
+p22n2=Subkompositionsgruppe
+
+
+
+//Label der Buttons
+
+bt01=speichern
+bt02=neues Prozessmodul anlegen
+bt03=Fluss hinzufügen
+bt04=fertig
 bt05=neues Produktsystem anlegen
 bt06=Modul/System hinzufügen
 bt07=weiter
 bt08=Bedarfsvektor ergänzen
 bt09=VK-Fluss hinzufügen
-stat02=>>> Es wurde kein Name angegeben. <<<
-stat03=>>> Der angegebene Name ist bereits vorhanden. <<<
+bt10=Grenzwerte bestätigen
+bt11=hinzufügen
+bt12=Berechnungsergebnisse anzeigen
+bt13=neue Komponente anlegen
+bt14=neue Komposition anlegen
+bt15=Komponenten hinzufügen
+bt16=neue Gruppe anlegen
+bt17=Modul zur Gruppe hinzufügen
+bt18=System zur Gruppe hinzufügen
+bt19=Produktdekl. zur Gruppe hinzufügen
+bt20=Komponente zur Gruppe hinzufügen
+bt21=Komposition zur Gruppe hinzufügen
+
+//Label für LowerUpperDialog
+
+lbl01=Feste Abweichung in %
+btn18=Abweichung anwenden
+
+// Label für FlowTypeStringMap und ValueTypeStringMap
+
+cob01=Elementarfluss
+cob02=Produktfluss
+cob03=Hauptwert
+
+// Statusmeldungen
+
+stat01=>>> \u2026 <<<
+stat02=>>> Es wurde kein Name angegeben <<<
+stat03=>>> Der angegebene Name ist bereits vorhanden <<<
 stat04=>>> Anzahl Flussobjekte:\u0020
 stat05=\u0020<<<
 stat06=>>> Anzahl Prozessmodule:\u0020
@@ -57,148 +241,53 @@ stat17=>>> Name ist weder Prozessmodul noch Produktsystem <<<
 stat18=>>> Der Bedarfsvektor enthält\u0020
 stat19=>>> Der VK-Vektor enthält\u0020
 stat20=>>> Bitte keine Leerzeichen verwenden! <<<
-mp4=Liste
-mp41=Flüsse
-mp41e=Liste aller Flüsse
-mp42=Prozessmodule
-mp42e=Liste der Prozessmodule
-mp421=Einzelmodule
-mp421e=Liste der Einzelmodule
-mp422=Prozessmodulgruppen
-mp422e=Liste der Prozessmodulgruppen
-mp43=Produktsysteme
-mp43e=Liste aller Produktsysteme
-p02n5=Untergrenze
-p02n6=Obergrenze
-bt10=Grenzwerte bestätigen
 stat21=>>> unzulässige Eingabe <<<
-p06n1=Name
-p08n1=Elementtyp
-p08n2=Elementname
-p08n3=Subsystem
-p08n4=Bedarf
-mp5=Berechnen
-mp51=Sachbilanz berechnen
-mp51e=Sachbilanzen aller Produktsysteme
-mp6=Datei
-mp61=XML-Export
-mp61e=Exportieren des Objektbestandes in eine XML-Datei
-mp62=XML-Import
-mp62e=Importieren eines Objektbestandes aus einer XML-Datei
-mp14=Wirkungskategorie
-mp14e=neue Wirkungskategorie erfassen
-p10n1=Neue Wirkungskategorie  
-p10n2=Name der Wirkungskategorie
-p10n3=Indikator
-stat22=>>> Es wurde keine Kategorie angegeben. <<<
-stat23=>>> Die angegebene Kategorie ist bereits vorhanden. <<<
-stat24=>>> Es wurde kein Indikator angegeben. <<<
+stat22=>>> Es wurde keine Kategorie angegeben <<<
+stat23=>>> Die angegebene Kategorie ist bereits vorhanden <<<
+stat24=>>> Es wurde kein Indikator angegeben <<<
 stat25=>>> Anzahl Wirkungskategorien:\u0020
-mp44=Wirkungskategorien
-mp44e=Liste aller Wirkungskategorien
-p11n1=Wirkungsindikator
-mp15=Charakterisierungsfaktor
-mp15e=neuen Charakterisierungsfaktor erfassen
-p12n1=Neuer Charakterisierungsfaktor
-p12n2=Name des Charakterisierungsfaktors
-p12n3=Faktor
 stat26=>>> unzulässiger Faktor <<<
-stat27=>>> Die angegebene Wirkungskategorie existiert nicht. <<<
-mp45=Charakterisierungsfaktoren
-mp45e=Liste aller Charakterisierungsfaktoren
-p13n1=Kategorie
-mp16=Bewertungsmethode
-mp16e=neue Bewertungsmethode erfassen
-mp46=Bewertungsmethoden
-mp46e=Liste der Bewertungsmethoden
-mp52=Wirkungsabschätzung berechnen
-mp52e=Wirkungsabschätzung für einzelne Objekte
-p14n1=Neue Bewertungsmethode
-p14n2=Name der Bewertungsmethode
-bt11=hinzufügen
+stat27=>>> Die angegebene Wirkungskategorie existiert nicht <<<
 stat28=>>> Kategorien:\u0020
 stat29=\u0020<<< >>> Charakterisierungsfaktoren:\u0020
-stat30=>>> Der angegebene Charakterisierungsfaktor existiert nicht. <<<
-p16n1=Wirkungsabschätzung
-p16n2=Objekttyp
-bt12=Berechnungsergebnisse anzeigen
-cob01=Elementarfluss
-cob02=Produktfluss
-cob03=Hauptwert
-p16n3=Objektname
-p16n4=Werttyp
-p16n5=Wert
-stat31=>>> Das Modul ist bereits Bestandteil des Produktsystems. <<<
-mp17=Produktdeklaration
-mp20=Einzeldeklaration
-mp20e=Einzelne Deklaration erfassen 
-mp22=Produktdeklarationsgruppe
-mp22e=Neue Produktdeklarationsgruppe erfassen
-mp18=Komponente
-mp19=Komposition
-p17n1=Neue Produktdeklaration
-p18n1=Neue Komponente
-p19n1=Neue Komposition
-mp17e=Neue Produktdeklaration erfassen
-mp18e=Neue Komponente erfassen
-mp19e=Neue Komposition erfassen
-mp47=Produktdeklarationen
-mp48=Komponenten
-mp49=Kompositionen
-mp47e=Liste der Produktdeklarationen
-mp48e=Liste der Komponenten
-mp49e=Liste der Kompositionen
-p17n2=Name des zu deklarierenden Produkts
-stat32=>>> Es wurde keine Bewertungsmethode angegeben. <<<
-stat33=>>> Die angegebene Bewertungsmethode existiert nicht. <<<
+stat30=>>> Der angegebene Charakterisierungsfaktor existiert nicht <<<
+stat31=>>> Das Modul ist bereits Bestandteil des Produktsystems <<<
+stat32=>>> Es wurde keine Bewertungsmethode angegeben <<<
+stat33=>>> Die angegebene Bewertungsmethode existiert nicht <<<
 stat34=>>> Anzahl Produktdeklarationen:\u0020
 stat35=>>> Unkorrekte Wirkungskategorie <<<
-p18n2=Name der Komponente
-p18n3=Bezug
-bt13=neue Komponente anlegen
-p19n2=Name der Komposition
-p19n3=hinzuzufügende Komponente
-bt14=neue Komposition anlegen
-bt15=Komponenten hinzufügen
 stat36=>>> Der Name ist anderweitig vergeben. <<<
-mp121=Einzelmodul
-mp122=Prozessmodulgruppe
-mp121e=einzelnes Prozessmodul erfassen
-mp122e=Gruppe von Prozessmodul erfassen
-p20n1=Neue Prozessmodulgruppe
-p20n11=Neue Subsystemgruppe
-mp23=Subsystemgruppe
-mp23e=Neue Subsystemgruppe erfassen
-mp50=Subsystemgruppen
-mp50e=Liste der Subsystemgruppen
-p20n2=Name der Gruppe
-p20n3=relevanter Produktfluss
-p20n4=Name des hinzuzufügenden Moduls
-p20n41=Name des hinzuzufügenden Systems
-bt16=neue Gruppe anlegen
-bt17=Modul zur Gruppe hinzufügen
-bt171=System zur Gruppe hinzufügen
-stat37=>>> Der angegebene Fluss existiert nicht. <<<
-stat38=>>> Das angegebene Prozessmodul existiert nicht. <<<
-stat381=>>> Das angegebene Subsystem existiert nicht. <<<
-stat39=>>> Das angegebene Prozessmodul ist inkompatibel. <<<
-stat391=>>> Das angegebene Subsystem ist inkompatibel. <<<
+stat37=>>> Der angegebene Fluss existiert nicht <<<
+stat38=>>> Das angegebene Prozessmodul existiert nicht <<<
+stat381=>>> Das angegebene Produktsystem existiert nicht <<<
+stat39=>>> Das angegebene Prozessmodul ist inkompatibel <<<
+stat391=>>> Das angegebene Produktsystem ist inkompatibel <<<
 stat40=>>> Die Gruppe umfasst \u0020
-stat41=\u0020 Prozessmodule. <<<
-stat42=>>> Name ist weder Produktsystem noch Produktdeklaration <<<
-lbl01=Feste Abweichung in %
-btn18=Abweichung anwenden
-stat43=>>> Der Name bezeichnet bereits ein Prozessmodul. <<<
-stat44=>>> Der Name bezeichnet bereits eine Prozessmodulgruppe. <<<
-stat441=>>> Der Name bezeichnet bereits eine Subsystemgruppe. <<<
-stat45=>>> Der Name bezeichnet bereits ein Produktsystem. <<<
+stat41=\u0020 Prozessmodule <<<
+stat42=>>> Name ist weder Produktsystem noch Produktdeklaration/-gruppe <<<
+stat43=>>> Der Name bezeichnet bereits ein Prozessmodul <<<
+stat44=>>> Der Name bezeichnet bereits eine Prozessmodulgruppe <<<
+stat441=>>> Der Name bezeichnet bereits eine Systemgruppe <<<
+stat45=>>> Der Name bezeichnet bereits ein Produktsystem <<<
 stat46=>>> Der Name bezeichnet bereits eine Produktdeklarationsgruppe <<<
 stat47=\u0020 Produktdeklarationen <<<
 stat48=>>> Die angegebene Produktdeklaration existiert nicht <<<
-p22n1=Neue Produktdeklarationsgruppe
-p22n4=Name der hinzuzufügenden Produktdeklaration
-bt18=Produktdekl. zur Gruppe hinzufügen
-mp471=Einzeldeklarationen
-mp471e=Liste der Einzeldeklarationen
-mp472=Produktdeklarationsgruppen
-mp472e=Liste der Produktdeklarationsgruppen
+stat49=\u0020 Wirkungskategorien <<<
+stat50=>>> Der Name bezeichnet bereits eine Produktdeklaration <<<
+stat51=>>> Produktdeklaration
+stat52=>>> Die angegebene Produktdeklaration ist inkompatibel (Einheit) <<<
+stat53=>>> Der Name bezeichnet bereits eine Komponentengruppe <<<
+stat54=\u0020 Komponenten <<<
+stat55=>>> Die angegebene Komponente existiert nicht <<<
+stat56=>>> Der Name bezeichnet bereits eine Komposition <<<
+stat57=>>> Anzahl Kompositionen:\u0020
+stat58=>>> Die angegebene Komposition existiert nicht <<<
+stat59=>>> Name ist weder Komponente/Komponentengruppe,\u2028Subkomposition/Subkompositionsgruppe noch Produktsystem  <<<
+stat60=>>> Die Komposition umfasst\u0020
+stat61=\u0020Elemente <<<
+stat62=>>> Der Name bezeichnet bereits eine Kompositionsgruppe <<<
+stat63=\u0020 Kompositionen <<<
+stat64=>>> Die angegebene Komposition existiert nicht <<<
+
+
+
